<resources>
    <string name="app_name">OSport</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">525799510935126</string>
    <string name="google_app_id"> AIzaSyB8SjEn9p-wMVWrRCaiMMmaAPNbAspRGO4</string>

    <!-- Navigation Drawer Items -->
    <string name="home_item">Home</string>
    <string name="activities_item">Activities</string>
    <string name="statistics_item">Statistics</string>
    <string name="friends_item">Friends</string>
    <string name="log_out_item">Log out</string>
    <string name="settings_item">Settings</string>
    <string name="configuracion_item">Configuration</string>

    <!-- Login Activity strings -->
    <string name="login_or_create">or</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="enter_valid_email">Enter a valid email address</string>
    <string name="enter_valid_password">8 or more alphanumeric characters are required</string>
    <string name="login_failed">Login failed</string>
    <string name="title_activity_login">Log in</string>
    <string name="log_in">Login</string>
    <string name="create_account">Create account</string>
    <string name="confirm_registration">Confirm registration in email</string>
    <string name="go_to_email">Go to email</string>
    <string name="choose_email_app">Choose your email app</string>

    <!-- Create Account Activity strings -->
    <string name="title_activity_create_account">Create account</string>
    <string name="hint_username">Name (public username)</string>
    <string name="repeat_password">Repeat password</string>
    <string name="emergency_email">Recovery email address</string>
    <string name="enter_username">Enter your username</string>
    <string name="error_creating_account">Error creating account</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="recovery_email_empty">Indicate email for recovery password</string>
    <string name="user_already_exists">This email is already registered</string>
    <string name="social_item">Social</string>
    <string name="geo_search_item">GeoSearch</string>

    <!-- User Profile Activity -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_profile">Profile</string>
    <string name="hint_lastname">Lastname (to improve search)</string>
    <string name="save_changes">Save changes</string>
    <string name="input_city">City</string>
    <string name="input_weight">Weigth (kg)</string>
    <string name="input_height">Height (cm)</string>
    <string name="input_age">Age</string>
    <string name="specify_username">You must specify a username</string>

    <!-- User Profile Activity -->
    <string name="title_activity_search_users">Search users</string>
    <string name="restore_password_email">Restore password in email</string>
    <string name="restore_password_failed">Restoring password failed</string>

    <!-- Maps -->
    <string name="duration">Duration</string>
    <string name="speed_km_h">Speed\n(km/h)</string>
    <string name="speed_miles_h">Speed\n(miles/h)</string>
    <string name="distance_km">Distance\n(km)</string>
    <string name="distance_miles">Distance\n(miles)</string>
    <string name="calories">Calories\n(kcal)</string>
    <string name="speed_km_h_oneline">Speed (km/h)</string>
    <string name="speed_miles_h_oneline">Speed (miles/h)</string>
    <string name="distance_km_oneline">Distance (km)</string>
    <string name="distance_miles_oneline">Distance (miles)</string>
    <string name="calories_oneline">Calories (kcal)</string>
    <string name="start_workout">Start workout</string>
    <string name="activity">Activity</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="restart">Restart</string>
    <string name="km_units">Kms</string>
    <string name="miles_units">Miles</string>
    <string name="choose_distance">Choose distance units</string>
    <string name="choose_speed">Choose speed units</string>
    <string name="km_h_units">Km/h</string>
    <string name="miles_h_units">Miles/h</string>
    <string name="choose_your_activity">Choose your activity</string>
    <string name="gps_disabled">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="wait_a_moment">Wait a moment...</string>
    <string name="forgot_your_password"><![CDATA[<u>Forgot your password?</u>]]></string>
    <string name="logging_in">Logging in...</string>
    <string name="stop_workout">Stop workout</string>
    <string name="want_stop_worktout">Are you sure you want stop the workout?</string>
    <string name="saving_work_data">Saving workout data...</string>
    <string name="save_activity">Save</string>
    <string name="discard_activity">Discard</string>
    <string name="save_workout_data">Workout data</string>
    <string name="want_save_wokout">Do you want to save and publish this workout data?</string>
    <string name="not_activities_to_show">There aren\'t activities to show</string>
    <string name="not_chats_to_show">There aren\'t chats to show</string>

    <string-array name="array_activities">
        <item>Cycling</item>
        <item>Running</item>
        <item>Jogging</item>
        <item>Walking (moderate)</item>
        <item>Walking (high)</item>
        <item>Walking</item>
    </string-array>

    <string name="title_activity_followers">Followers</string>
    <string name="title_activity_following">Following</string>
    <string name="searching">Searching...</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="unfollow_dialog">Unfollow</string>
    <string name="workout_saved">Workout saved correctly</string>
    <string name="cycling">Cycling</string>
    <string name="start_route">Start</string>
    <string name="finish_route">Finish</string>
    <string name="title_activity_configuration">Configuration</string>
    <string name="name_separator">" at "</string>
    <string name="sure_about_unfollow">Are you sure about unfollow this user?</string>
    <string name="saving_changes">Saving changes...</string>
    <string name="speed">Speed</string>
    <string name="distance">Distance</string>
    <string name="data_updated">Data have been updated</string>
    <string name="error_retrieving_userdata">Error retrieving user data</string>
    <string name="new_follower">You have a new follower</string>
    <string name="new_message_from">New message from</string>
    <string name="delete_chat">Delete chat</string>
    <string name="sure_delete_chat">Are you sure about delete this chat?</string>
    <string name="delete">Delete</string>
    <string name="creating_account">Creating account...</string>
    <string name="others">Others</string>
    <string name="runner">Runner</string>
    <string name="cyclist">Cyclist</string>
    <string name="saving_configuration">Saving configuration...</string>
    <string name="approximately">Approximately</string>
    <string name="not_users_to_show">There aren\'t users to show</string>
    <string name="exit">Exit</string>
    <string name="want_exit_osport">Do you want to leave OSport?</string>
    <string name="distance_mi_oneline">Distance (mi)</string>
    <string name="delete_activity">Delete activity</string>
    <string name="sure_delete_activity">Are you sure about delete this activity?</string>
    <string name="delete_account">Delete Account</string>
    <string name="deleting_account">Deleting OSport account...</string>
    <string name="must_check">Check the switch for delete account</string>
    <string name="see_you">OSport hopes to see you again</string>
    <string name="are_you_sure_about_delete">Are you sure about delete your OSport account?\n\nFor safety, put On the switch</string>
    <string name="delete_my_account">Delete my account</string>
    <string name="connection_error">Connection error</string>
    <string name="error_report">Send error report</string>
    <string name="want_send_error">Sorry, OSport has stopped. Do yo want to send an error report?</string>
    <string name="send">Send mail</string>
    <string name="if_geosearch">You must pick a point on the map if active GeoSearch</string>
    <string name="if_privacity">You must pick a point on the map if active Privacity Zone</string>
    <string name="configuration_updated">Configuration updated</string>
    <string name="select_sport_type">Select your sport type so others users can find you</string>
    <string name="active_for_search">Enables GeoSearch to search other users, and can be found</string>
    <string name="geosearch_point">Select the point where other users will find you in GeoSearch</string>
    <string name="privacity_info">Your workouts routes will not be registered in the Privacity Zone</string>
    <string name="privacity_point">Select the point that generates the Privacity Zone</string>
    <string name="choose_notifications">Choose which notifications you want to receive</string>
    <string name="privacity_zone">Privacity Zone</string>
    <string name="search">Search</string>
    <string name="go_to_configuration">Go to Configuration</string>
    <string name="must_active_geosearch">You must activate GeoSearch to search for users by proximity, and to be found by other users</string>
    <string name="send_error_report">Send error report</string>
    <string name="body_email">Write here if you want\n-----------------------------------\nAutogenerated error log. Don\'t remove please.\n-----------------------------------\n</string>

    <string-array name="array_month">
        <item>All</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="array_month_short">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
</resources>
