<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Checkeable menu -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/home_item" />
        <item
            android:id="@+id/nav_activities"
            android:title="@string/activities_item"
            android:icon="@drawable/ic_home"/>
        <item
            android:id="@+id/nav_friends"
            android:title="@string/friends_item"
            android:icon="@drawable/ic_home"/>

        <!-- Configuration section -->
        <item
            android:id="@+id/configuration_section"
            android:title="@string/configuracion_item">
            <menu>
                <item
                    android:id="@+id/nav_settings"
                    android:title="@string/settings_item"
                    android:icon="@android:drawable/ic_menu_manage"/>
                <item
                    android:id="@+id/nav_log_out"
                    android:icon="@android:drawable/ic_lock_power_off"
                    android:title="@string/log_out_item" />
            </menu>
        </item>
    </group>

</menu>